--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
 
   <body>
+    <link rel="stylesheet" href="relative path to CSS file">
+
 
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
